--- a/angular-phonecat/package.json
+++ b/angular-phonecat/package.json
@@ -16,6 +16,7 @@
         "protractor": "^4.0.9"
     },
     "scripts": {
+        "assert": "node app/phone-detail/test.js",
         "postinstall": "bower install",
         "prestart": "npm install",
         "start": "http-server ./app -a localhost -p 8000 -c-1",
